/*
 * $Id: ChangeLog,v 1.1336 2003/08/09 20:45:18 druzus Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/


2003-08-10 23:11 UTC+0200 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/contrib/libmisc/Makefile
  - xharbour/contrib/libmisc/dbftools.c
  * xharbour/contrib/libct/Makefile
  + xharbour/contrib/libct/dbftools.c
   * dbftools.c (FIELDTYPE(), FIELDSIZE(), FIELDDECI()) moved from
     libmisc to libct

  * xharbour/contrib/libct/dbftools.c
   ! small corectrion to avoid GPFs and return proper values when
     no open area or bad param pass
   + FIELDNUM(), DBFSIZE() added

2003-08-09 22:18 UTC+0200 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/xharbour.spec
    * removed ${RPM_OPT_FLAGS} from C_USR
      '-pipe' breaks building proces on RH9 when user doesn't install
      old slang-devel
  * xharbour/make_tgz.sh
    ! fixes for RH9 and shared lib names

  * xharbour/source/rtl/gtcrs/gtcrs.c
  * xharbour/source/rtl/gtcrs/hb-charmap.def
    ! small fixes in HB_SETDISPCP()

  + xharbour/tests/dspcolor.prg
  + xharbour/tests/keycodes.prg
    + two short programs for GT testing - test colors and inkey codes

2003-08-09 11:49 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/simplex.c
    ! Fixed save/restore of tentative match to save/restore length of token.

  * source/pp/ppcore.c
    ! Fixed getExpReal() to reject an expression startting with '->'.

  * source/vm/hvm.c
    + Added 2 commented TraceLog() debugging lines.

2003-08-07 22:23 UTC+0200 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/source/rdd/dbfntx/dbfntx1.c
    ! support of binary keys (borrowed from Harbour, many thanks
      to Alexander)

  * xharbour/source/vm/fm.c
    * clear MEMINFO signatures in hb_xfree()

2003-08-07 11:17 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/objfunc.prg
    ! Fixed a bad typo.
