@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.1336 2003/08/09 20:45:18 druzus Exp $
+ * $Id: ChangeLog,v 1.1337 2003/08/10 21:51:59 druzus Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,7 +7,13 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
-
+2003-08-10 19:10 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
+  * source/rtl/set.c
+   *(All changes on behave of _SET_PRINTFILE place)
+    when compiling under Windows (Borland and MSVC Compiler) the
+    _SET_PRINTFILE automaticaly point to default printer,(an set device
+    to print, direct send data to printer)
+    Checking  recieve filename, if no extension is passed ,".prn" is added to file
 
 2003-08-10 23:11 UTC+0200 Przemyslaw Czerpak <druzus@polbox.com>
   * xharbour/contrib/libmisc/Makefile
